--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@eslint/config-array": "^0.18.0",
+    "@eslint/object-schema": "^2.1.4",
     "framer-motion": "^11.3.31",
+    "glob": "^11.0.0",
     "my-freelance-website": "file:",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
