--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "my-freelance-website": "file:",
     "next": "14.2.7",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "rimraf": "^6.0.1"
   },
