--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
